2007-08-06  Albert Chu <chu11@llnl.gov>

	* common/src/secure.c (secure_memset), common/src/arp-common.c
	(__secure_memset): Fix secure/guaranteed memset corner case.
	
2007-08-06  Albert Chu <chu11@llnl.gov>

	* ac_ipmi_monitoring_sdr_cache_dir.m4,
	ac_ipmi_monitoring_sensor_config_file.m4,
	ac_ipmidetect_config_file.m4, ac_ipmidetectd_config_file.m4,
	ac_ipmipower_config_file.m4: Replace hard-coded /etc and /var with
	${sysconfdir} and ${localstatedir} respecively.  Remove option to
	specify config files.  Location of config files is now controlled
	through setting of --localstatedir and --sysconfidr.
 
 	* ipmimonitoring/Makefile.am: Install w/ correct ./configure
	location.
 
 	* freeipmi.spec.in: Use %{_localstatedir} instead of /var.
 
 	* bmc-watchdog/Makefile.am: Fix distcheck.

2007-08-06  Albert Chu <chu11@llnl.gov>

	* ipmidetect/ipmidetect.conf.5.in, ipmidetect/ipmidetectd.8.in,
	ipmidetect/ipmidetectd.conf.5.in, ac_ipmidetect_config_file.m4,
	ipmidetect/src/ipmidetect/ipmidetect.c: Fix inconsistency w/
	"CONF_FILE" vs. "CONFIG_FILE_DEFAULT" leading to invalid manpages.
	
2007-08-02  Albert Chu <chu11@llnl.gov>

	* configure.ac: Update version for release.

        * Tagged Release-0_4_2

2007-08-02  Troy Telford <ttelford@lnxi.com>

	* freeipmi.spec.in: Fixed SLES packaging issue.

2007-07-31  Albert Chu <chu11@llnl.gov>

        * freeipmi.spec.in: Put version into source path.
	
2007-07-27  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c (main,
	_cmdline_parse): Fix potential free() bug.
	
2007-07-26  Albert Chu <chu11@llnl.gov>

        * freeipmi.spec.in: Fix URL for release.

	* configure.ac: Update version for release.

        * Tagged Release-0_4_1

2007-07-26  Albert Chu <chu11@llnl.gov>

        * common/src/ipmi-sdr-cache.c (sdr_cache_load): Fix corner case bug.

 	* freeipmi.spec.in: Fix buildroot typo. 
	
2007-07-18  Albert Chu <chu11@llnl.gov>
